--- a/index.html
+++ b/index.html
@@ -1,27 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kangkong Hunters</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000000;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kangkong Hunters</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-        img {
-            max-width: 10%;
-            height: auto;
-        }
-    </style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background-color: #000;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      font-family: 'Arial', sans-serif;
+      padding-top: 10vh; 
+    }
+
+    img {
+      max-width: 10%;
+      height: auto;
+      margin-bottom: 20px; 
+    }
+
+    .status-wrapper {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .status {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px; 
+      font-weight: bold;
+      color: #fff;
+      padding: 5px 10px; 
+      background-color: rgba(255, 255, 255, 0.1); 
+      border-radius: 5px;
+    }
+
+    .red-dot {
+      width: 10px; 
+      height: 10px;
+      background-color: #ff0000;
+      border-radius: 50%;
+      margin-right: 10px;
+      animation: blink-dot 1s infinite;
+    }
+
+    @keyframes blink-dot {
+      50% { opacity: 0.3; }
+    }
+
+    .bottom-space {
+      flex-grow: 1; 
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      padding-bottom: 20px; 
+    }
+  </style>
 </head>
 <body>
-    <img src="logo.png" alt="Kangkong Hunters Logo">
+  <img src="logo.png" alt="Kangkong Hunters Logo" />
+  <div class="status-wrapper">
+    <div class="status">
+      <div class="red-dot"></div>
+      <span>IN PROGRESS</span>
+    </div>
+  </div>
+  <div class="bottom-space">
+
+  </div>
 </body>
 </html>
