--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <span>Coming soon</span>
         </div>
       </div>
-      <p>Collect Common Civilian's, Uncommon Looter's, and Rare Hunter's Stones for power-ups.</p>
+      <p>Collect Civilian's, Looter's, and Hunter's Stones for power-ups.</p>
 	  <p> (ERC-1155, Limited Supply)</p>
     </div>
     <div class="section">
