--- a/index.html
+++ b/index.html
@@ -945,9 +945,9 @@
     const animationContainer = playArea.querySelector('.animation-container');
 
     const items = [
-      { name: 'Civilian's Stone', src: './civilian_stone.png' },
-      { name: 'Looter's Stone', src: './looter_stone.png' },
-      { name: 'Hunter's Stone', src: './Hunter_stone.png' }
+      { name: 'Civilian Stone', src: './civilian_stone.png' },
+      { name: 'Looter Stone', src: './looter_stone.png' },
+      { name: 'Hunter Stone', src: './Hunter_stone.png' }
     ];
 
     openButton.addEventListener('click', () => {
