--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     button::before { content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent); transition: left 0.3s; }
     button:hover::before { left: 100%; }
     .enter-button { background: linear-gradient(45deg, #007bff, #00ccff); box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); }
-    .ronin-btn { background: linear-gradient(45deg, #28a745, #00cc99); box-shadow: 0 0 10px rgba(40, 167, 69, 0.5); }
+    .test-button { background: linear-gradient(45deg, #ff9900, #ff6600); box-shadow: 0 0 10px rgba(255, 153, 0, 0.5); margin-top: 10px; }
+    .ronin-btn { background: linear-gradient rectifier(45deg, #28a745, #00cc99); box-shadow: 0 0 10px rgba(40, 167, 69, 0.5); }
     .guest-btn { background: linear-gradient(45deg, #6c757d, #adb5bd); box-shadow: 0 0 10px rgba(108, 117, 125, 0.5); }
     .logout-button { background: linear-gradient(45deg, #dc3545, #ff6666); box-shadow: 0 0 10px rgba(220, 53, 69, 0.5); }
     .chat-input button { padding: 10px 20px; font-size: 0.9rem; }
@@ -344,6 +345,7 @@
       </div>
     </div>
     <button class="enter-button" id="enterButton">ENTER</button>
+    <button class="test-button" id="testButton">TEST</button>
   </div>
 
   <div class="wallet-connect-screen" id="walletConnectScreen">
@@ -444,7 +446,19 @@
     const WS_URL = 'wss://kangkong-hunters-worker.kangkonghunters.workers.dev/chat/secure';
 
     let walletAddress = null, walletProvider = null, currentUser = null, isGuest = false, knownUsers = new Set(), ws = null, authToken = null, userKeyPair = null;
-    const logoSection = document.querySelector('.logo-section'), enterButton = document.getElementById('enterButton'), walletConnectScreen = document.getElementById('walletConnectScreen'), usernameModal = document.getElementById('usernameModal'), mainContainer = document.getElementById('mainContainer'), walletInfo = document.getElementById('walletInfo'), chatMessages = document.getElementById('chatMessages'), chatInput = document.getElementById('chatInput'), sendMessageBtn = document.getElementById('sendMessageBtn'), logoutBtn = document.getElementById('logoutBtn'), usernameInput = document.getElementById('usernameInput'), chatRecipient = document.getElementById('chatRecipient');
+    const logoSection = document.querySelector('.logo-section'), 
+          enterButton = document.getElementById('enterButton'), 
+          testButton = document.getElementById('testButton'),
+          walletConnectScreen = document.getElementById('walletConnectScreen'), 
+          usernameModal = document.getElementById('usernameModal'), 
+          mainContainer = document.getElementById('mainContainer'), 
+          walletInfo = document.getElementById('walletInfo'), 
+          chatMessages = document.getElementById('chatMessages'), 
+          chatInput = document.getElementById('chatInput'), 
+          sendMessageBtn = document.getElementById('sendMessageBtn'), 
+          logoutBtn = document.getElementById('logoutBtn'), 
+          usernameInput = document.getElementById('usernameInput'), 
+          chatRecipient = document.getElementById('chatRecipient');
     const chatheads = {};
     let reconnectAttempts = 0, maxReconnectAttempts = 5;
 
@@ -1065,6 +1079,11 @@
       logoSection.style.display = 'none';
       walletConnectScreen.classList.add('show');
     });
+
+    testButton.addEventListener('click', () => {
+      window.location.href = './games.html';
+    });
+
     document.getElementById('connectRoninBtn').addEventListener('click', connectRoninWallet);
     document.getElementById('viewAsGuestBtn').addEventListener('click', viewAsGuest);
     document.getElementById('setUsernameBtn').addEventListener('click', setUsername);
